# fast_movie_reserve

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tasks.txt
app/: __main__.py  constants.py  models.py
app/api/v1/: __init__.py  auth.py  genre.py  movie.py  reporting.py  reservation.py  seat.py  showtime.py  theatre.py
app/core/: config.py  schema.py  setup.py
app/core/auth/: cookie.py  jwt.py  schema.py
app/core/database/: __init__.py  base.py  mixin.py  session.py  url.py  (+1 more)
app/domain/: genre.py  movie.py  movie_genre.py  reservation.py  role.py  seat.py  showtime.py  theatre.py  user.py
app/dto/: genre.py  movie.py  reporting.py  reservation.py  seat.py  showtime.py  user.py
app/jobs/: celery.py  utils.py
app/redis/: __init__.py  client.py
app/schema/: __init__.py  genre.py  movie.py  movie_genre.py  reservation.py  role.py  seat.py  showtime.py  theatre.py  user.py
app/seed/: __main__.py  data.py
app/services/: genre.py  movie.py  movie_genre.py  reporting.py  reservation.py  role.py  seat.py  showtime.py  theatre.py  user_auth.py
migrations/: env.py
migrations/versions/: 1906a230338a_reserved_at_defualt.py  214ab5084a3b_init_user_model.py  444ec8426cc7_reservation_unique_partial_index.py  4c71f6bcd7a1_init_other_models.py  55e22b4f5436_init_models.py  656e33453537_add_showtime_seat_to_reservation.py  82d79b2c8a86_init_models.py  839443fc4ac3_init_models.py  ada0769ed082_init_models.py  ede9bc506fdb_init_models.py  f239bb2dc41a_showtime_flag_is_processed_for_complete.py
(+20 files in other folders)
